--- a/css/styles.css
+++ b/css/styles.css
@@ -21,3 +21,66 @@ body
     background-color: #b2b2b2;
     border-radius: 25px;
 }
+
+.buttons
+{
+    font-size: 30px;
+    border-radius: 25px;
+    width: 50%;
+    margin-left: 25%;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.spaced
+{
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+.buttons:hover{
+    background-color: #00d5124f;
+    color: #FFFFFF;
+    opacity: 50%;
+}
+
+.bigInput
+{
+	font-size: 30px;
+}
+
+.fullWidth
+{
+        display: inline-block;
+        width: 100%;
+}
+
+input[type="text"],input[type="password"]{
+    border-radius: 25px;
+    text-align: center;
+    width: 80%;
+    margin-left: 10%;
+    margin-bottom: 2%;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+/* This tag is doubled so that it can override the styling for all text and password inputs above; look up specificity. */
+.searchBox.searchBox
+{
+        border-radius: 25px;
+	font-size: 20px;
+        width: 22%;
+        margin-left: 1%;
+        margin-right: 1%;
+        font-family: 'Ubuntu', sans-serif;
+}
+
+#inner-title{
+    display: inline-block;
+    font-size: 0.8em;
+    width: 90%;
+    text-align: center;
+    margin-left: 5%;
+    margin-bottom: 2%;
+    font-family: 'Ubuntu', sans-serif;
+    color: #95060a;
+}
