Added divider bars
I added the divider bars between contacts that Leinecker requested; also fixed a bug I discovered where if you edited a contact twice in a row, the text boxes will populate with the data before the first edit, because the code that was supposed to change the local copy of the contact referred to the fields by wrong names.

--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,11 @@ input[type="text"],input[type="password"]{
         font-family: 'Roboto Mono', monospace;
 }
 
+hr
+{
+	border-top: 2px solid;
+}
+
 #inner-title{
     display: inline-block;
     font-size: 0.8em;
