Fixed css issue with background stretching

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,10 @@
 
 body
 {
-    background-image: linear-gradient(0deg, rgb(92, 92, 92),rgb(9, 9, 9)),linear-gradient(22.5deg, rgb(30, 105, 176) 0%, rgb(30, 105, 176) 58%,rgb(74, 127, 188) 58%, rgb(74, 127, 188) 63%,rgb(118, 149, 200) 63%, rgb(118, 149, 200) 69%,rgb(162, 172, 213) 69%, rgb(162, 172, 213) 90%,rgb(206, 194, 225) 90%, rgb(206, 194, 225) 97%,rgb(250, 216, 237) 97%, rgb(250, 216, 237) 100%),linear-gradient(0deg, rgb(30, 105, 176) 0%, rgb(30, 105, 176) 58%,rgb(74, 127, 188) 58%, rgb(74, 127, 188) 63%,rgb(118, 149, 200) 63%, rgb(118, 149, 200) 69%,rgb(162, 172, 213) 69%, rgb(162, 172, 213) 90%,rgb(206, 194, 225) 90%, rgb(206, 194, 225) 97%,rgb(250, 216, 237) 97%, rgb(250, 216, 237) 100%),linear-gradient(45deg, rgb(30, 105, 176) 0%, rgb(30, 105, 176) 58%,rgb(74, 127, 188) 58%, rgb(74, 127, 188) 63%,rgb(118, 149, 200) 63%, rgb(118, 149, 200) 69%,rgb(162, 172, 213) 69%, rgb(162, 172, 213) 90%,rgb(206, 194, 225) 90%, rgb(206, 194, 225) 97%,rgb(250, 216, 237) 97%, rgb(250, 216, 237) 100%); background-blend-mode:overlay, overlay, overlay, normal;
+    background: linear-gradient(0deg, rgb(92, 92, 92),rgb(9, 9, 9)),linear-gradient(22.5deg, rgb(30, 105, 176) 0%, rgb(30, 105, 176) 58%,rgb(74, 127, 188) 58%, rgb(74, 127, 188) 63%,rgb(118, 149, 200) 63%, rgb(118, 149, 200) 69%,rgb(162, 172, 213) 69%, rgb(162, 172, 213) 90%,rgb(206, 194, 225) 90%, rgb(206, 194, 225) 97%,rgb(250, 216, 237) 97%, rgb(250, 216, 237) 100%),linear-gradient(0deg, rgb(30, 105, 176) 0%, rgb(30, 105, 176) 58%,rgb(74, 127, 188) 58%, rgb(74, 127, 188) 63%,rgb(118, 149, 200) 63%, rgb(118, 149, 200) 69%,rgb(162, 172, 213) 69%, rgb(162, 172, 213) 90%,rgb(206, 194, 225) 90%, rgb(206, 194, 225) 97%,rgb(250, 216, 237) 97%, rgb(250, 216, 237) 100%),linear-gradient(45deg, rgb(30, 105, 176) 0%, rgb(30, 105, 176) 58%,rgb(74, 127, 188) 58%, rgb(74, 127, 188) 63%,rgb(118, 149, 200) 63%, rgb(118, 149, 200) 69%,rgb(162, 172, 213) 69%, rgb(162, 172, 213) 90%,rgb(206, 194, 225) 90%, rgb(206, 194, 225) 97%,rgb(250, 216, 237) 97%, rgb(250, 216, 237) 100%); 
+    background-blend-mode:overlay, overlay, overlay, normal;
     overflow-y:scroll;
+    background-attachment: fixed;
 }
 
 
